--- a/public/birthday-invite.html
+++ b/public/birthday-invite.html
@@ -1,7 +1,7 @@
 <h1>It's my birthday!</h1>
-<h2>On the 12th May</h2>
+<h2>On the 31st December</h2>
 
-<img src="./cake.jpeg" alt="birthday cake" />
+<img src="../assets/images/cake.jpeg" alt="birthday cake" />
 
 <h3> What to bring:</h3>
 <ol>
